--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ main{
     border-radius: 30px;
     padding:2.5em;
     color: white;
-    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 main > label ,main > h1   {
     animation:onload 5s 1 ease;
