--- a/style.css
+++ b/style.css
@@ -82,17 +82,17 @@ a{
 }
 main{
     box-sizing: border-box;
+    backdrop-filter: blur(5px) !important;
     width: max(50vw,250px);
     height: 70vh;
     display: grid;
     place-content: center;
-    background-color: rgba(128, 128, 128, 0.1);
+    background-color: rgba(128, 128, 128, 0.4);
     z-index: 2;
     animation: onload 4.5s 1 ease;
     border-radius: 30px;
     padding:2.5em;
     color: white;
-    -webkit-backdrop-filter: blur(5px);
 }
 main > label ,main > h1   {
     animation:onload 5s 1 ease;
